# todo_project

./: .coveragerc  .env.example  .gitignore  Dockerfile  Dockerfile.test  LICENSE  README.md  ToDoProject  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements  requirements.txt
.github/workflows/: ci.yml
app/: dependencies.py
app/api/auth/: auth.py
app/api/routers/: __init__.py  auth.py  tasks.py  users.py
app/core/: config.py  database.py
app/migrations/: env.py
app/models/: __init__.py  tasks.py  users.py
app/schemas/: tasks.py  users.py
app/services/: auth_service.py  tasks_service.py  users_service.py
tests/e2e/: conftest.py  test_auth.py  test_tasks.py  test_users.py
tests/integrations/: conftest.py  заметка
tests/integrations/api/: conftest.py  test_auth_api.py  test_tasks_api.py  test_users_api.py
tests/integrations/core/: .coverage  conftest.py  test_config.py  test_database.py
tests/integrations/models/: test_tasks_models.py  test_users_models.py
tests/integrations/schemas/: test_tasks_schema.py  test_users_schema.py
tests/units/: test_dependencies.py
tests/units/models/: test_tasks_models.py  test_user_models.py
tests/units/schemas/: test_task_schema.py  test_user_schema.py
