[tool.isort]
profile = "black"

[project]
name = "project-todo"
version = "0.1.0"
description = ""
authors = [
    {name = "vivivi",email = "vialex287@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"

dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=45.0.7,<46.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
coverage = "^7.10.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
